# EO-tutorial

./: 02_floods.py  README.md  pyproject.toml
book/: _toc.yml  floods.ipynb
book/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
book/_build/html/: .buildinfo  notebooks.html  searchindex.js
book/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
